1.4.0: ??
 * Implemented some basic user administration features.
 * Added new rate plans with support for user administration.
 * Wrote a tool for manually updating a user's rate plan: tools/set_plan.py
 * Refactored some of the client-side form-handling code to cut down on
   special-case hacks.

1.3.40: May 27, 2008
 * Added some minor product page tweaks like meta description tags.

1.3.39: May 27, 2008
 * Removed key binding for title button (ctrl-T), since it was interfering
   with tab opening in Firefox.

1.3.38: May 26, 2008
 * Attempting to access the RSS feed for a non-existent notebook now
   displays a somewhat informative message in the feed instead of just
   silently raising an error.

1.3.37: May 20, 2008
 * Fixed a bug where image preloading loaded incorrect paths for
   certain images.

1.3.36: May 19, 2008
 * Fix for bug where read-write notebooks that the anonymous user had
   read-only access to would show up as read-only, even when logged in.

1.3.35: May 19, 2008
 * Potential fix for bug where caching of Notebook objects can cause
   read-write notebooks to display as read-only.

1.3.34: May 19, 2008
 * Improved performance of searching multiple notebooks.

1.3.33: May 19, 2008
 * Searching now displays results from multiple notebooks and not just the
   current notebook.

1.3.32: May 19, 2008
 * Decreased some font sizes so more note links don't wrap as much.

1.3.31: May 18, 2008
 * Improved the detection of whether an existing note has been altered and
   thus needs to be saved to the server.
 * Expanded workaround for IE iframe positioning bug to include IE 7.

1.3.30: May 16, 2008
 * Updated download page with mention of new Mercurial source repository.
 * Added Mercurial link on faq page.

1.3.29: May 16, 2008
 * Added support for database hostname and ssl mode in configuration file.

1.3.28: May 14, 2008
 * Updated the pricing page with more info about each feature.

1.3.27: May 14, 2008